resources/css/default.scss
/* ... */
h3 {
  font-weight: 500;
  color: #2e3436;
  padding: 0;
  margin-top: 0;
}

p {
  padding: 0.5em 0;
  margin-bottom: 1em;
}

a {
  color: midnightblue;

  &:hover,
  &:focus,
  &.pure-menu-link:hover,
  &.pure-menu-link:focus,
  .pure-menu-selected &.pure-menu-link:hover,
  .pure-menu-selected &.pure-menu-link:focus {
    color: white;
    background-color: #444;
    padding: 0.5em 1em;
  }

  &:hover,
  &:focus {
    padding: 0.15rem;
  }
}

.overflow {
  overflow: hidden;
}

ul {
  padding-left: 1.5em;
}

strong,
b {
  font-weight: bold;
}

pre,
code,
kbd,
samp,
tt {
  font-family: monospace;
  font-size: 0.9rem;
  padding: 0 0.2rem;
}

.xmldata {
  font-family: monospace;
}

/* ***********************************************************
 * SLIDING SIDE-MENU FOR SMALL SCREENS
 *************************************************************/

/*
Add transition to containers so they can push in and out.
*/
#layout,
#menu,
#foot,
.menu-link {
  -webkit-transition: all 0.2s ease-out;
  -moz-transition: all 0.2s ease-out;
  -ms-transition: all 0.2s ease-out;
  -o-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

/*
This is the parent `<div>` that contains the menu and the content area.
*/
#layout.active #menu {
  right: 11em;
  width: 11em;
}

/*
The `#menu` `<div>` is the parent `<div>` that contains the `.pure-menu` that
appears on the left side of the page.
*/
#menu {
  margin-right: -11em; /* "#menu" width */
  width: 11em;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 1000; /* so the menu or its navicon stays above all content */
  background: $secondaryBackground;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}

/*
All anchors inside the menu should be styled like this.
*/
#menu a {
  color: #fff;
  border: none;
  padding: 0.6em 0 0.6em 0.6em;
}

/*
Remove all background/borders, since we are applying them to #menu.
*/
#menu .pure-menu,
#menu .pure-menu ul {
  border: none;
  background: transparent;
}

/*
Add that light border to separate items into groups.
*/
#menu .pure-menu ul,
#menu .pure-menu .menu-item-divided {
  border-top: 1px solid $transitionBackground;
}

/*
This styles the selected menu item `<li>`.
*/
#menu .pure-menu-selected,
#menu .pure-menu-heading {
  background: $primaryBackground;
  color: black;
}

/*
This styles a link within a selected menu item `<li>`.
*/
#menu .pure-menu-selected a {
  color: #fff;
}

/*
This styles the menu heading.
*/
#menu .pure-menu-heading {
  font-size: 110%;
  color: #fff;
  margin: 0;
  text-transform: none;
}

/* -- Dynamic Button For Responsive Menu -- */

/*
The button to open/close the Menu is custom-made and not part of Pure. Here's
how it works:
*/

/*
`.menu-link` represents the responsive menu toggle that shows/hides on
small screens.
*/
.menu-link {
  position: relative;
  display: block; /* show this only on small screens */
  top: 0;
  right: 0; /* "#menu width" */
  background: transparent;
  z-index: 10;
  height: 2rem;
  padding: 2rem 0;
  text-decoration: none;

  &:hover,
  &:focus {
    padding: 2rem 0;
    background: none !important;
  }
}

.menu-link span {
  position: relative;
  display: block;
  color: #fff;
}

.menu-link span,
.menu-link span::before,
.menu-link span::after {
  background-color: transparent;
}

.menu-link span:focus,
.menu-link span:hover {
  color: #010101cc;
}

/* -- Responsive Styles (Media Queries) ------------------------------------- */

@media screen and (max-width: 40em) {
  #layout.active {
    position: relative;
    right: 11em;

    /* moves to right as many ems as the one used by the menu */
  }

  #menuLink.menu-link.active {
    position: fixed;
    right: 13em;
  }

  #foot.active {
    margin-right: 11em;
  }
}

/************************************************************
HEADER
*************************************************************/
#header {
  height: 6rem;
  background: linear-gradient(141deg, $primaryBackground 0%, $transitionBackground 51%, $secondaryBackground 75%);
}

.logo-header {
  min-width: 8em;
  height: 6rem;
  max-width: 70%;
}

#logo {
  font-family: sans-serif;
  font-size: 2.5em;
  color: white;
  text-shadow: 0 3px 2px #532900;
}

.simple {
  font-weight: 300;
}

.saml {
  font-family: Verdana, sans-serif;
  letter-spacing: -0.12em;
  font-weight: 600;
  margin-left: -0.05em;
}

.language-menu {
  font-family: sans-serif;
  font-weight: 400;
  min-width: 10rem;
  padding: 0em 0.6em !important;
}

.language-bar {
  height: 6rem;
}

/************************************************************
CONTENT
*************************************************************/
#layout {
  right: 0;
  padding-right: 0;
  min-height: 100%;

  /* negative margin = footer height + padding-top + padding-bottom */
  margin: 0 auto -6rem;
}

#content {
  padding-top: 2em;
  padding-bottom: 2rem;
}

.message-box {
  background-color: #f4f4f4;
  border-left: 0.3125rem solid #444;
  box-shadow: 0 5px 8px -6px #0003;
  margin: 1rem 0;
  padding: 1.3rem;
  position: relative;
}

.message-box.error {
  background-color: #f7e4e1;
  border-left-color: #cc4b37;
}

.message-box.warning {
  background-color: $light-yellow;
  border-left-color: #f9f56b;
}

.message-box.success {
  background-color: #daf7e6;
  border-left-color: #46cc48;
}

.auth_methods {
  margin-top: 2em;
  width: 35%;
}

.code-box {
  margin-bottom: 1em;
  border: 1px solid #ccc;

  a {
    padding: 0.5em;
  }
}

.code-box-content {
  word-break: break-all;
  font-size: 1em;
  line-height: 1.10;
  padding: 0.5em 1em;
  display: block;
  min-height: 1em;
  height: 100%;
  white-space: pre-wrap;
  font-family: monospace;

  &::selection {
    color: black;
    background: $light-yellow;
  }
}

.code-box-title {
  border-bottom: 1px solid #ccc;
  background-color: #e0e0e0;
  padding: 0.5em 0 0.5em 0.5em;
}

pre#xmlmetadata {
  width: 98%;
}
/* ... */

